Setup: www redirect

--- a/src/default.conf
+++ b/src/default.conf
@@ -42,3 +42,8 @@ server {
     #    deny  all;
     #}
 }
+
+server {
+    server_name www.example.com;
+    return 301 $scheme://example.com$request_uri;
+}
